# suzume

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.cursor/rules/: declarative-navigation.mdc  named-exports.mdc  no-type-casting.mdc
suzume-client/: .oxlintrc.json  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
suzume-client/src/: App.tsx  main.tsx  styles.css
suzume-client/src/api/: deckCounts.ts  decksTree.ts  fetchJson.ts  health.ts  models.ts  url.ts
suzume-client/src/components/: AppHeader.tsx  AppShell.tsx  DeckTree.tsx  DecksSidebar.module.css  DecksSidebar.tsx  HealthGate.tsx  HealthStatusCard.tsx  PracticeModePicker.module.css  PracticeModePicker.tsx
suzume-client/src/components/app-shell/: AppShell.module.css  AppShell.tsx
suzume-client/src/components/deck-tree/: DeckTree.module.css  DeckTree.tsx  index.ts
suzume-client/src/hooks/: useAppSettings.ts  useAutoResizeTextarea.ts  useAutoScrollToBottom.ts  useAvailableModelsQuery.ts  useDeckCountsQuery.ts  useDecksTreeQuery.ts  useHealthQuery.ts  usePracticeSocket.ts
suzume-client/src/pages/: DecksPage.tsx  PracticePage.tsx  StatusPage.module.css  StatusPage.tsx
suzume-client/src/utils/: ankiMedia.ts  decks.ts  practice.ts  practiceDiff.ts  practiceHighlight.ts  practiceMessages.ts
suzume-server/: Cargo.toml  Dockerfile
suzume-server/src/: health.rs  main.rs  models.rs  state.rs
suzume-server/src/anki/: decks.rs  media.rs  mod.rs
suzume-server/src/practice/: cards.rs  feedback.rs  mod.rs  session.rs
(+33 files in other folders)
