[package]
name = "suzume-server"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = "0.3.4"
anki_bridge = { version = "0.10", default-features = false, features = ["reqwest_async"] }
axum = { version = "0.8.6", features = ["ws"] }
envy = "0.4"
futures-util = "0.3"
http = "1.3.1"
rand = "0.8"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "request-id", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.18.1", features = ["v4"] }
